User visible changes in Buildbot.             -*- outline -*-

** New buildstep `MTR'

A new class buildbot.process.mtrlogobserver.MTR was added. This buildstep is
used to run test suites using mysql-test-run. It parses the stdio output for
test failures and summarises them on the waterfall page. It also makes server
error logs available for debugging failures, and optionally inserts
information about test runs and test failures into an external database.

* Release 0.7.11p (July 16, 2009)

Fixes a few test failures in 0.7.11, and gives a default value for branchType
if it is not specified by the master.

* Release 0.7.11 (July 5, 2009)

Developers too numerous to mention contributed to this release.  Buildbot has
truly become a community-maintained application.  Much hard work is not
mentioned here, so please consult the git logs for the detailed changes in this
release.

** Better Memory Performance, Disk Cleanup

Buildbot handles its memory usage a bit better, and can automatically purge old
history to keep memory and disk usage low.  Look for eventHorizon,
buildHorizon, logHorizon, and changeHorizon.

** Password Protection for Force Build and Stop actions

It is now possible to require authentication to force build and stop via the
WebStatus interface. To use this, set the 'auth' field of WebStatus to a valid
IAuth implementation. Current implementations are:
	BasicAuth with a list of user/passwords
	HTPasswdAuth with an .htpasswd file
By default, the unauthenticated behavior will occur.

** Web Status changes

The "Graceful Shutdown" feature, as a kind of "force", now obeys allowForce.

The waterfall and other pages are more deeply interlinked.

Pending builds can be individually cancelled, or cancelled in bulk.

** Fixed Transfer Steps

Transfer step classes are more reliable; DirectoryUpload and DirectoryDownload
use tarfile instead of manually framing files.  The DirectoryUpload step also
now supports compression.

** Conditional Steps
